--- a/_less/article.less
+++ b/_less/article.less
@@ -105,11 +105,8 @@
 
 /* Sidebar styles */
 
-.bsh-article-sidebar {
-    padding-top: 50px;
-    border-top: 1px solid #cfcfcf;
-    margin-top: 100px;
-    
+.bsh-related-sidebar {
+     
     > hr {
         margin-bottom: 35px;
     }
@@ -128,3 +125,17 @@
     }
 }
 
+.bsh-related-bottombar {
+    .nav > li > a {
+        padding-left: 0;
+
+        &:hover {
+            background-color: #fff;
+            text-decoration: underline;
+        }
+    }
+}
+
+.bsh-edit {
+    margin-top: 50px;
+}
