--- a/_includes/article-sidebar.html
+++ b/_includes/article-sidebar.html
@@ -39,7 +39,7 @@
       <a href="#" class="thumbnail bsh-thumbnail" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/HhHuCz5_pRQ">
         <img src="{{site.baseurl }}/images/basespace_video.png" class="img-responsive" />
         <div class="caption">
-          <h5>Introducing Native App Engine</h5>
+          <h5>Introduction to BaseSpace</h5>
         </div>
       </a>
     </div>
