fix video name and image mismatch issue

--- a/_includes/edit.html
+++ b/_includes/edit.html
@@ -37,7 +37,7 @@
     <a href="#" class="thumbnail bsh-thumbnail" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/HhHuCz5_pRQ">
       <img src="{{site.baseurl }}/images/basespace_video.png" class="img-responsive" />
       <div class="caption">
-        <h5>Introduction to BaseSpace</h5>
+        <h5>Introducing Native app engine</h5>
       </div>
     </a>
   </div>
