--- a/_less/article.less
+++ b/_less/article.less
@@ -13,9 +13,9 @@
 
 .bsh-article-title {
   margin-bottom: 25px;
-  font: 700 28px/1.2em @font-header, sans-serif;
   color: @article-color;
   letter-spacing: 1px;
+  margin-top: 35px;
 
   @media (max-width: @media-xs-min) {
     margin-top: 50px;
@@ -32,6 +32,10 @@
     > h2, > h3 {
         margin-top: -@anchor-heading-offset;
         padding-top: @anchor-heading-offset;
+    }
+
+    > h4 {
+        padding-top: 20px;
     }
 
     > p {
@@ -106,7 +110,9 @@
 /* Sidebar styles */
 
 .bsh-related-sidebar {
-     
+    
+    padding-top: 20px;
+
     > hr {
         margin-bottom: 35px;
     }
