--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -255,29 +255,39 @@ a.bsh-thumbnail {
   .home-title {
     margin-bottom: 45px;
   }
+
+  .container {
+    .row {
+      .col-sm-3 {
+        > a {
+          &:hover, &:focus {
+            text-decoration: none;
+          }
+        }
+      }
+    }
+  }
+    
 }
 
 .bsh-additional-section {
-  display: block;
   color: #666;
+  text-align: center;
+  background-color: #fefefe;
+  border-radius: 3px;
+  padding: 15px;
 
-  @media all and (max-height: @media-sm-max) {
-    margin-bottom: 30px;
-  }
-
-  &:hover {
+  &:hover, &:focus {
     text-decoration: none;
   }
 
-  .media-body {
-    padding-left: 10px;
-  }
-
   &:hover {
-    text-decoration: none;
+    border: 1px solid @link-color;
+    color: @link-color;
+  }
+
+  .bsh-additional-icon {
+    font-size: 28px;
   }
 }
 
-.bsh-additional-icon {
-  font-size: 4.5rem;
-}
