reduced font and padding on mobile resolution

--- a/_less/article.less
+++ b/_less/article.less
@@ -18,7 +18,8 @@
   margin-top: 35px;
 
   @media (max-width: @media-xs-min) {
-    margin-top: 50px;
+    font-size: 34px;
+    margin-top: 5px;
   }
 }
 
