--- a/_less/articlestep.less
+++ b/_less/articlestep.less
@@ -75,6 +75,10 @@
     background-image:linear-gradient(to bottom, rgba(242, 242, 242, 1) 0%, rgba(242, 242, 242, 1) 100%), linear-gradient(to bottom, rgba(242, 242, 242, 1) 0%, rgba(242, 242, 242, 1) 100%);
     background-clip: content-box, padding-box;
     text-align: center;
+
+    @media (max-width: @media-xs-min) {
+    	padding: 5px;
+    }
 }
 
 .step-image > img {
