--- a/_less/font.less
+++ b/_less/font.less
@@ -34,11 +34,11 @@
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?bhzuh8');
-	src:url('fonts/icomoon.eot?#iefixbhzuh8') format('embedded-opentype'),
-		url('fonts/icomoon.woff?bhzuh8') format('woff'),
-		url('fonts/icomoon.ttf?bhzuh8') format('truetype'),
-		url('fonts/icomoon.svg?bhzuh8#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?-wbvcdd');
+	src:url('fonts/icomoon.eot?#iefix-wbvcdd') format('embedded-opentype'),
+		url('fonts/icomoon.woff?-wbvcdd') format('woff'),
+		url('fonts/icomoon.ttf?-wbvcdd') format('truetype'),
+		url('fonts/icomoon.svg?-wbvcdd#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -57,141 +57,71 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.icon-getting-started .path1:before {
-	content: "\e60c";
-	color: rgb(0, 0, 0);
-}
-.icon-getting-started .path2:before {
-	content: "\e60e";
-	margin-left: -1em;
-	color: rgb(255, 255, 255);
-}
-.icon-getting-started .path3:before {
-	content: "\e60f";
-	margin-left: -1em;
-	color: rgb(0, 0, 0);
-}
-.icon-getting-started .path4:before {
-	content: "\e614";
-	margin-left: -1em;
-	color: rgb(255, 255, 255);
-}
-.icon-getting-started .path5:before {
-	content: "\e619";
-	margin-left: -1em;
-	color: rgb(0, 0, 0);
-}
-.icon-getting-started .path6:before {
-	content: "\e61a";
-	margin-left: -1em;
-	color: rgb(255, 255, 255);
-}
-.icon-getting-started .path7:before {
-	content: "\e61b";
-	margin-left: -1em;
-	color: rgb(0, 0, 0);
-}
-.icon-getting-started .path8:before {
-	content: "\e61c";
-	margin-left: -1em;
-	color: rgb(255, 255, 255);
-}
-.icon-getting-started .path9:before {
-	content: "\e61d";
-	margin-left: -1em;
-	color: rgb(0, 0, 0);
-}
-.icon-getting-started .path10:before {
-	content: "\e61e";
-	margin-left: -1em;
-	color: rgb(0, 0, 0);
-}
-
-.icon-data-management:before {
-	content: "\e610";
-}
-
-.icon-analysis-report:before {
-	content: "\e611";
-}
-
-.icon-apps:before {
-	content: "\e612";
-}
-
 .icon-article:before {
-	content: "\e613";
-}
-
-.icon-lab:before {
-	content: "\e615";
-}
-
-.icon-public-data:before {
-	content: "\e616";
-}
-
-.icon-run:before {
-	content: "\e617";
-}
-
-.icon-pencil:before {
-	content: "\e609";
-}
-
-.icon-profile:before {
-	content: "\e618";
-}
-
-.icon-file:before {
 	content: "\e600";
 }
 
-.icon-phone:before {
+.icon-lab:before {
 	content: "\e601";
 }
 
-.icon-print:before {
+.icon-analysis-report:before {
 	content: "\e602";
 }
 
-.icon-bubbles:before {
+.icon-caret-right:before {
 	content: "\e603";
 }
 
-.icon-wrench:before {
+.icon-edit:before {
 	content: "\e604";
 }
 
-.icon-cog:before {
-	content: "\e60a";
-}
-
-.icon-switch:before {
-	content: "\e61f";
-}
-
-.icon-menu:before {
+.icon-MiSeq:before {
 	content: "\e605";
 }
 
-.icon-cloud:before {
-	content: "\e60d";
+.icon-bullhorn:before {
+	content: "\e91a";
 }
 
-.icon-question:before {
-	content: "\e606";
+.icon-file-text:before {
+	content: "\e922";
+}
+
+.icon-envelop:before {
+	content: "\e945";
+}
+
+.icon-printer:before {
+	content: "\e954";
+}
+
+.icon-database:before {
+	content: "\e964";
+}
+
+.icon-wrench:before {
+	content: "\e991";
+}
+
+.icon-cog:before {
+	content: "\e994";
+}
+
+.icon-switch:before {
+	content: "\e9b6";
+}
+
+.icon-menu:before {
+	content: "\e9bd";
 }
 
 .icon-info:before {
-	content: "\e60b";
+	content: "\ea0c";
 }
 
-.icon-envelope:before {
-	content: "\e607";
-}
-
-.icon-arrow-right:before {
-	content: "\e608";
+.icon-new-tab:before {
+	content: "\ea7e";
 }
 
