additional styling on Homepage

--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -100,6 +100,8 @@ a.bsh-well {
   padding-top: 28px;
   padding-bottom: 20px;
   padding-left: 25px;
+  position: relative;
+  padding-right: 50px;
 
   &:hover{
     text-decoration: none !important;
@@ -114,6 +116,13 @@ a.bsh-well {
 
   &:visited, &:focus {
     text-decoration: none !important;
+  }
+
+  .media-right {
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    margin-top: -13px;
   }
 }
 
@@ -185,7 +194,7 @@ a.bsh-well {
 }
 
 .caret-right {
-  font-size: 6rem; 
+  font-size: 30px; 
   color: #bbb;
 }
 
@@ -202,7 +211,6 @@ a.bsh-well {
 
   > h3 {
     padding-left: 15px;
-    margin-top: 15px;
   }
 
   > ul {
@@ -236,6 +244,10 @@ a.bsh-well {
 
 .new-window-icon {
   font-size: 9px;
+}
+
+#feed {
+  margin-bottom: 30px;
 }
 
 /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
