changed background color of additional links

--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -316,7 +316,7 @@ a.bsh-thumbnail {
   }
 
   &:hover {
-    background-color: #9ec4eb;
+    background-color: @link-color;
     color: #fff;
   }
 
