--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -54,7 +54,40 @@ input.gsc-search-button {
   display: none;
 }
 
+/* User Account styles */
 
+.bsh-user-account {
+
+
+}
+
+#bsh-account-dropdown {
+  border: none;
+  margin-top: 10px;
+
+  .account-left {
+    display: block;
+
+    .bsh-gravatar {
+      border: 1px solid #ccc;
+      width: 35px;
+      height: 35px;
+      border-radius: 50%;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+    }
+  }
+
+  .account-body {
+    display: block;
+    padding: 7px 6px 0px 10px;
+  }
+
+  .account-right {
+    padding: 12px 1px 0px 6px;
+    font-size: 10px;
+  }
+}
 
 /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
 
