--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -3,6 +3,7 @@
 <script src="{{ site.baseurl }}/js/video.js"></script>
 <script src="{{ site.baseurl }}/js/navigation.js"></script>
 <script src="{{ site.baseurl }}/js/newtobasespace.js"></script>
+<script src="{{ site.baseurl }}/js/usersession.js"></script>
 
 <!-- Google analytics code -->
 <script>
@@ -13,5 +14,4 @@
 
   ga('create', 'UA-7994485-30', 'auto');
   ga('send', 'pageview');
-
 </script>
