set return url to help site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 		  		<div class="col-md-12 col-lg-12">
 					<!-- Brand and toggle get grouped for better mobile display -->
 				    <div class="navbar-header">
-				      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bsh-header-navbar-collapse">
 				        <span class="sr-only">Toggle navigation</span>
 				        <span class="glyphicon glyphicon-search"></span>
 				      </button>
@@ -20,7 +20,7 @@
 				    </div>
 
 				    <!-- Collect the nav links, forms, and other content for toggling -->
-				    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				    <div class="collapse navbar-collapse" id="bsh-header-navbar-collapse">
 						<ul class="nav navbar-nav navbar-right hidden-xs hidden-sm {% if page.is_homepage == null %}hidden-md{% endif %}">
 							<li>
 								<a href="http://www.illumina.com/" target="_blank">
@@ -50,7 +50,7 @@
 								<li role="presentation"><a role="menuitem" tabindex="-1" href="https://basespace.illumina.com/auth/logout">Log out</a></li>
 							</ul>
 
-							<a href="https://basespace.illumina.com/auth/logout" class="btn btn-default" id="bsh-account-signin">Sign in</a>
+							<a href="https://accounts.illumina.com/?ReturnUrl=https%3A%2F%2Fhelp.basespace.illumina.com" class="btn btn-default" id="bsh-account-signin">Sign in</a>
 
 						</div>
 
