--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -58,7 +58,8 @@ input.gsc-search-button {
 
 #bsh-account-dropdown {
   border: none;
-  margin-top: 10px;
+  margin-top: 6px;
+  padding-top: 10px;
   
   .account-left {
     display: block;
