Displayed only first name on account button

--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -92,6 +92,7 @@ input.gsc-search-button {
   margin: 15px 15px 0px 0px;
   color: white;
   background-color: #328ed1;
+  border: none;
 }
 
 /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
