added burger icon on mobile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 				    <div class="navbar-header">
 				      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bsh-header-navbar-collapse">
 				        <span class="sr-only">Toggle navigation</span>
-				        <span class="glyphicon glyphicon-search"></span>
+				        <span class="icon-menu"></span>
 				      </button>
 				      <a class="navbar-brand" href="{{ site.baseurl }}/"><b>BaseSpace</b><sup><sup>&reg;</sup></sup> HelpCenter</a> 
 				    </div>
