fixed search results padding

--- a/css/style.less
+++ b/css/style.less
@@ -11,3 +11,4 @@
 @import url("headerfooter.less");
 @import url("homepage.less");
 @import url("newtobasespace.less");
+@import url("searchresults.less");
